--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,6 +24,10 @@ div#__next > div {
   height: 100%;
 }
 
+body {
+  margin: 0;
+}
+
 @layer utilities {
   @variants responsive {
     /* Hide scrollbar for Chrome, Safari and Opera */
